# pyMOF

./: .project  .pydevproject  LICENSE  README.md  setup.py
datasets/: RCSRnets.txt  structure-doi-CoRE-MOFsV2.0.csv
pyMOF/: mof_classifier.py  setup.cfg
pyMOF/data_imports/: __init__.py  parse_cifs.py  parse_nets.py
pyMOF/do_something/: __init__.py  do_something.py
pyMOF/electronic_notebook/: Experiment.py  Notebook.py  __init__.py
pyMOF/electronic_notebook/data/: experiment types.csv  experiments.csv
pyMOF/web_imports/: mgp_api_calls.py
scripts/: __init__.py  cifs_to_csv.py  parse-nets.py
