[metadata]
name = pyMOF
author = Daniel Streater
summary = Image analysis and machine-learning models particularly for the metallic organic frameworks
description-file = README.md
home-page = nothing yet
license = MIT
version = 0.1
classifier =
    Development Status :: 0 - Pre-alpha
    Environment :: Console
    Intended Audience :: Developers and materials scientists
    Intended Audience :: Chemists and Engineers 
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
keywords =
    setup
    distutils
[files]
packages =
    pyMOF
